fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ menu {
 
 /* Regole Layout */
 body {
+    overflow: hidden;
     font-family: sans-serif;
 }
 
